# libadt

./: .gitignore  CMakeLists.txt  Doxyfile  build.nix  default.nix  shell.nix
src/: CMakeLists.txt  bitwise_array.c  libadt.h  lptr.c  str.c  vector.c
src/libadt/: bitwise_array.h  init.h  lptr.h  str.h  util.h  vector.h
tests/: CMakeLists.txt  libadt_bitwise_array.c  libadt_lptr.c  libadt_str.c  libadt_vector.c  test_macros.h
